# applio

./: pyproject.toml  requirements.txt  run.bat
assets/: config.json
rvc/train/: train.py
tabs/plugins/installed/UVR/: plugin.py
